# structdiff

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: license.yml  rust.yml
benches/: bench.rs
benchmarks/: Cargo.toml
benchmarks/benches/: basic.rs  basic_mutate.rs  large.rs  rope.rs
benchmarks/src/: lib.rs
benchmarks/src/basic/: apply.rs  full.rs  generate.rs  mod.rs  mutate.rs
benchmarks/src/large/: apply.rs  full.rs  generate.rs  mutate.rs
derive/: Cargo.toml
derive/src/: difference.rs  lib.rs  parse.rs  shared.rs
src/: collections.rs  error.rs  lib.rs
src/collections/: mod.rs  ordered_array_like.rs  rope.rs  unordered_array_like.rs  unordered_map_like.rs  unordered_map_like_recursive.rs
src/collections/rope/: mod.rs  slots.rs
tests/: derives.rs  enums.rs  expose.rs  integration.rs  types.rs
