[package]
name = "structdiff"
version = "0.5.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/knickish/structdiff"
description = """zero-dependency crate for generating and applying partial diffs between struct instances"""

[dependencies]
nanoserde           = { version = "^0.1.32", optional = true }
serde               = { version = "^1.0.0", optional = true, features = ["derive"] }
structdiff-derive   = { path = "derive", version = "=0.5.4" }

[features]
"default"   = []
"nanoserde" = ["dep:nanoserde", "structdiff-derive/nanoserde"]
"serde"     = ["dep:serde", "structdiff-derive/serde"]
"debug_diffs" = ["structdiff-derive/debug_diffs"]

[dev-dependencies]
serde_json = "1.0.87"
assert_unordered = "0.3.5"