[package]
name = "structdiff-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_unordered    = "0.3.5"
structdiff  = { path = "..", features = ["serde", "debug_diffs", "__rope_benchmarks"] }
nanorand    = { version = "0.7.0" } 
diff-struct = { version = "0.5.3", optional = true} 
serde       = { version = "^1.0.0", features = ["derive"] }
serde-diff  = { version = "0.4.1", optional = true}
bincode     = { version = "1.3.3" }
criterion = "0.5.1"

[features]
default = ["compare"]
compare = ["dep:serde-diff", "dep:diff-struct"]

[profile.release]
lto = "fat"
opt-level = 3
debug = true

[profile.bench]
lto = "fat"
opt-level = 3
debug = true

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "large"
harness = false

[[bench]]
name = "rope"
harness = false
