[package]
name = "structdiff-derive"
version = "0.5.9"
authors = ["Makepad <info@makepad.nl>", "Fedor <not.fl3@gmail.com>", "Kirk <knickish@gmail.com"]
edition = "2018"
description = "derive macro library for structdiff"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
nanoserde           = { version = "^0.1.32", optional = true }
serde               = { version = "^1.0.0", optional = true, features = ["derive"] }

[features]
"default"   = []
"nanoserde" = ["dep:nanoserde"]
"serde"     = ["dep:serde"]
"debug_diffs" = []
"generated_setters" = []
